[package]
authors = ["Yruama_Lairba <yruama_lairba@hotmail.com>"]
edition = "2018"
readme = "README.md"
name = "nucleo64-guitar-dsp"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-rtic = "0.5.5"
cortex-m-semihosting = "0.3.3"
#panic-halt = "0.2.0"
#panic-semihosting = "0.5.6"
rtt-target = {version = "0.3.0", features = ["cortex-m"]}
wm8731-alt = {path = "wm8731-alt"}

# [dependencies.stm32f4]
# version = "0.12.1"
# features = ["stm32f411", "rt"]

[dependencies.stm32f4xx-hal]
version = "0.8"
features = ["rt", "stm32f411"] # replace the model of your microcontroller here

# Uncomment for the panic example.
# panic-itm = "0.4.1"

# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f3]
# features = ["stm32f303", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "nucleo64-guitar-dsp"
test = false
bench = false
